--- a/frontend-developer/platzi-video/not-found/not-found.html
+++ b/frontend-developer/platzi-video/not-found/not-found.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <header class="header">
-    <img class="header__img" src="./assets/logo-platzi.png" alt="Platzi Video Logo">
+    <img tabindex="0" class="header__img" src="./assets/logo-platzi.png" alt="Platzi Video Logo">
   </header>
 
   <section class="not-found">
