--- a/frontend-developer/platzi-video/login/login.html
+++ b/frontend-developer/platzi-video/login/login.html
@@ -11,15 +11,15 @@
 </head>
 <body>
   <header class="header">
-    <img class="header__img" src="./assets/logo-platzi.png" alt="Platzi Video Logo">
+    <img tabindex="0" class="header__img" src="./assets/logo-platzi.png" alt="Platzi Video Logo">
   </header>
 
   <section class="login">
     <section class="login__container">
-      <h2>Inicia sesion</h2>
+      <h2 tabindex="0">Inicia sesion</h2>
       <form class="login__container--form">
-        <input class="input" type="text" placeholder="Correo">
-        <input class="input" type="password" placeholder="Contraseña">
+        <input aria-label="Correo" class="input" type="text" placeholder="Correo">
+        <input aria-label="Contraseña" class="input" type="password" placeholder="Contraseña">
         <button class="button">Iniciar sesion</button>
         <div class="login__container--remember">
           <label>
@@ -29,14 +29,14 @@
         </div>
       </form>
       <section class="login__container--social-media">
-        <div>
+        <div tabindex="0">
           <img src="./assets/google-icon.png" alt="Google Icon">Inicia sesion con google
         </div>
-        <div>
+        <div tabindex="0">
           <img src="./assets/twitter-icon.png" alt="Twitter Icon">Inicia sesion con twitter
         </div>
       </section>
-      <p class="login__container--register">No tienes ninguna cuenta? <a href="/">Registrate</a></p>
+      <p tabindex="0" class="login__container--register">No tienes ninguna cuenta? <a href="/">Registrate</a></p>
     </section>
   </section>
 
