--- a/frontend-developer/platzi-video/register/register.html
+++ b/frontend-developer/platzi-video/register/register.html
@@ -11,19 +11,19 @@
 </head>
 <body>
   <header class="header">
-    <img class="header__img" src="./assets/logo-platzi.png" alt="Platzi Video Logo">
+    <img tabindex="0"class="header__img" src="./assets/logo-platzi.png" alt="Platzi Video Logo">
   </header>
 
   <section class="register">
     <section class="register__container">
-      <h2>Registrate</h2>
+      <h2 tabindex="0">Registrate</h2>
       <form class="register__container--form">
-        <input class="input" type="text" placeholder="Nombre">
-        <input class="input" type="text" placeholder="Correo">
-        <input class="input" type="password" placeholder="Contraseña">
+        <input aria-label="Nombre" class="input" type="text" placeholder="Nombre">
+        <input aria-label="Correo" class="input" type="text" placeholder="Correo">
+        <input aria-label="Contaseña" class="input" type="password" placeholder="Contraseña">
         <button class="button">Registrarme</button>
       </form>
-      <p class="register__container--login">Ya tienes cuenta? <a href="/">Inicia sesion</a></p>
+      <p tabindex="0" class="register__container--login">Ya tienes cuenta? <a href="/">Inicia sesion</a></p>
     </section>
   </section>
 
