Made some modifications

--- a/frontend-developer/platzi-video/home-page/home-page.html
+++ b/frontend-developer/platzi-video/home-page/home-page.html
@@ -4,17 +4,18 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="../assets/platzi_favicon.png">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Mulish&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./styles.css">
-  <title>Home</title>
+  <title>PlatziVideo</title>
 </head>
 <body>
   <header class="header">
-    <img tabindex="0" class="header__img" src="./assets/logo-platzi.png" alt="Platzi Video Logo">
+    <img tabindex="0" class="header__img" src="../assets/logo-platzi.png" alt="Platzi Video Logo">
     <div class="header__menu">
       <div class="header__menu--profile">
-        <img src="./assets/user-icon.png" alt="User">
+        <img src="../assets/user-icon.png" alt="User">
         <p tabindex="0">Perfil</p>
       </div>
       <ul>
@@ -25,7 +26,7 @@
   </header>
 
   <section class="search">
-    <h2 tabindex="0" class="search__title">¿Que quieres ver hoy?</h2>
+    <h2 tabindex="0" class="search__title">¿Qué quieres ver hoy?</h2>
     <input aria-label="Buscar" class="input" type="text" placeholder="Buscar...">
   </section>
 
@@ -36,8 +37,8 @@
         <img class="carousel-item__img" src="https://images.pexels.com/photos/789822/pexels-photo-789822.jpeg?auto=format%2Ccompress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="Mujer feliz">
         <div class="carousel-item__details">
           <div>
-            <img tabindex="0" src="./assets/play-icon.png" alt="Play">
-            <img tabindex="0" src="./assets/plus-icon.png" alt="Plus">
+            <img tabindex="0" src="../assets/play-icon.png" alt="Play">
+            <img tabindex="0" src="../assets/plus-icon.png" alt="Plus">
           </div>
           <p tabindex="0" class="carousel-item__details--title">Titulo descriptivo</p>
           <p tabindex="0" class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
@@ -47,8 +48,8 @@
         <img class="carousel-item__img" src="https://images.pexels.com/photos/1427741/pexels-photo-1427741.jpeg?auto=format%2Ccompress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="De vacaciones en la playa">
         <div class="carousel-item__details">
           <div>
-            <img tabindex="0" src="./assets/play-icon.png" alt="Play">
-            <img tabindex="0" src="./assets/plus-icon.png" alt="Plus">
+            <img tabindex="0" src="../assets/play-icon.png" alt="Play">
+            <img tabindex="0" src="../assets/plus-icon.png" alt="Plus">
           </div>
           <p tabindex="0" class="carousel-item__details--title">Titulo descriptivo</p>
           <p tabindex="0" class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
@@ -58,8 +59,8 @@
         <img class="carousel-item__img" src="https://images.pexels.com/photos/2522682/pexels-photo-2522682.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Mujer posando">
         <div class="carousel-item__details">
           <div>
-            <img tabindex="0" src="./assets/play-icon.png" alt="Play">
-            <img tabindex="0" src="./assets/plus-icon.png" alt="Plus">
+            <img tabindex="0" src="../assets/play-icon.png" alt="Play">
+            <img tabindex="0" src="../assets/plus-icon.png" alt="Plus">
           </div>
           <p tabindex="0" class="carousel-item__details--title">Titulo descriptivo</p>
           <p tabindex="0" class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
@@ -69,8 +70,8 @@
         <img class="carousel-item__img" src="https://images.pexels.com/photos/904276/pexels-photo-904276.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500" alt="Fiesta de pintura">
         <div class="carousel-item__details">
           <div>
-            <img tabindex="0" src="./assets/play-icon.png" alt="Play">
-            <img tabindex="0" src="./assets/plus-icon.png" alt="Plus">
+            <img tabindex="0" src="../assets/play-icon.png" alt="Play">
+            <img tabindex="0" src="../assets/plus-icon.png" alt="Plus">
           </div>
           <p tabindex="0" class="carousel-item__details--title">Titulo descriptivo</p>
           <p tabindex="0" class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
@@ -80,8 +81,8 @@
         <img class="carousel-item__img" src="https://images.pexels.com/photos/1172207/pexels-photo-1172207.jpeg?auto=format%2Ccompress&cs=tinysrgb&dpr=2&w=500" alt="Admirando la naturaleza">
         <div class="carousel-item__details">
           <div>
-            <img tabindex="0" src="./assets/play-icon.png" alt="Play">
-            <img tabindex="0" src="./assets/plus-icon.png" alt="Plus">
+            <img tabindex="0" src="../assets/play-icon.png" alt="Play">
+            <img tabindex="0" src="../assets/plus-icon.png" alt="Plus">
           </div>
           <p tabindex="0" class="carousel-item__details--title">Titulo descriptivo</p>
           <p tabindex="0" class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
@@ -91,8 +92,8 @@
         <img class="carousel-item__img" src="https://images.pexels.com/photos/233129/pexels-photo-233129.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500" alt="Calle poblada">
         <div class="carousel-item__details">
           <div>
-            <img tabindex="0" src="./assets/play-icon.png" alt="Play">
-            <img tabindex="0" src="./assets/plus-icon.png" alt="Plus">
+            <img tabindex="0" src="../assets/play-icon.png" alt="Play">
+            <img tabindex="0" src="../assets/plus-icon.png" alt="Plus">
           </div>
           <p tabindex="0" class="carousel-item__details--title">Titulo descriptivo</p>
           <p tabindex="0" class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
@@ -108,8 +109,8 @@
         <img class="carousel-item__img" src="https://images.pexels.com/photos/789822/pexels-photo-789822.jpeg?auto=format%2Ccompress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="Mujer feliz">
         <div class="carousel-item__details">
           <div>
-            <img tabindex="0" src="./assets/play-icon.png" alt="Play">
-            <img tabindex="0" src="./assets/plus-icon.png" alt="Plus">
+            <img tabindex="0" src="../assets/play-icon.png" alt="Play">
+            <img tabindex="0" src="../assets/plus-icon.png" alt="Plus">
           </div>
           <p tabindex="0" class="carousel-item__details--title">Titulo descriptivo</p>
           <p tabindex="0" class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
@@ -119,8 +120,8 @@
         <img class="carousel-item__img" src="https://images.pexels.com/photos/1427741/pexels-photo-1427741.jpeg?auto=format%2Ccompress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="De vacaciones en la playa">
         <div class="carousel-item__details">
           <div>
-            <img tabindex="0" src="./assets/play-icon.png" alt="Play">
-            <img tabindex="0" src="./assets/plus-icon.png" alt="Plus">
+            <img tabindex="0" src="../assets/play-icon.png" alt="Play">
+            <img tabindex="0" src="../assets/plus-icon.png" alt="Plus">
           </div>
           <p tabindex="0" class="carousel-item__details--title">Titulo descriptivo</p>
           <p tabindex="0" class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
@@ -130,8 +131,8 @@
         <img class="carousel-item__img" src="https://images.pexels.com/photos/2522682/pexels-photo-2522682.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Mujer posando">
         <div class="carousel-item__details">
           <div>
-            <img tabindex="0" src="./assets/play-icon.png" alt="Play">
-            <img tabindex="0" src="./assets/plus-icon.png" alt="Plus">
+            <img tabindex="0" src="../assets/play-icon.png" alt="Play">
+            <img tabindex="0" src="../assets/plus-icon.png" alt="Plus">
           </div>
           <p tabindex="0" class="carousel-item__details--title">Titulo descriptivo</p>
           <p tabindex="0" class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
@@ -141,8 +142,8 @@
         <img class="carousel-item__img" src="https://images.pexels.com/photos/904276/pexels-photo-904276.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500" alt="Fiesta de pintura">
         <div class="carousel-item__details">
           <div>
-            <img tabindex="0" src="./assets/play-icon.png" alt="Play">
-            <img tabindex="0" src="./assets/plus-icon.png" alt="Plus">
+            <img tabindex="0" src="../assets/play-icon.png" alt="Play">
+            <img tabindex="0" src="../assets/plus-icon.png" alt="Plus">
           </div>
           <p tabindex="0" class="carousel-item__details--title">Titulo descriptivo</p>
           <p tabindex="0" class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
@@ -152,8 +153,8 @@
         <img class="carousel-item__img" src="https://images.pexels.com/photos/1172207/pexels-photo-1172207.jpeg?auto=format%2Ccompress&cs=tinysrgb&dpr=2&w=500" alt="Admirando la naturaleza">
         <div class="carousel-item__details">
           <div>
-            <img tabindex="0" src="./assets/play-icon.png" alt="Play">
-            <img tabindex="0" src="./assets/plus-icon.png" alt="Plus">
+            <img tabindex="0" src="../assets/play-icon.png" alt="Play">
+            <img tabindex="0" src="../assets/plus-icon.png" alt="Plus">
           </div>
           <p tabindex="0" class="carousel-item__details--title">Titulo descriptivo</p>
           <p tabindex="0" class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
@@ -163,8 +164,8 @@
         <img class="carousel-item__img" src="https://images.pexels.com/photos/233129/pexels-photo-233129.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500" alt="Crowded street">
         <div class="carousel-item__details">
           <div>
-            <img tabindex="0" src="./assets/play-icon.png" alt="Play">
-            <img tabindex="0" src="./assets/plus-icon.png" alt="Plus">
+            <img tabindex="0" src="../assets/play-icon.png" alt="Play">
+            <img tabindex="0" src="../assets/plus-icon.png" alt="Plus">
           </div>
           <p tabindex="0" class="carousel-item__details--title">Titulo descriptivo</p>
           <p tabindex="0" class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
@@ -180,8 +181,8 @@
         <img class="carousel-item__img" src="https://images.pexels.com/photos/789822/pexels-photo-789822.jpeg?auto=format%2Ccompress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="Mujer feliz">
         <div class="carousel-item__details">
           <div>
-            <img tabindex="0" src="./assets/play-icon.png" alt="Play">
-            <img tabindex="0" src="./assets/plus-icon.png" alt="Plus">
+            <img tabindex="0" src="../assets/play-icon.png" alt="Play">
+            <img tabindex="0" src="../assets/plus-icon.png" alt="Plus">
           </div>
           <p tabindex="0" class="carousel-item__details--title">Titulo descriptivo</p>
           <p tabindex="0" class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
@@ -191,8 +192,8 @@
         <img class="carousel-item__img" src="https://images.pexels.com/photos/1427741/pexels-photo-1427741.jpeg?auto=format%2Ccompress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="De vacaciones en la playa">
         <div class="carousel-item__details">
           <div>
-            <img tabindex="0" src="./assets/play-icon.png" alt="Play">
-            <img tabindex="0" src="./assets/plus-icon.png" alt="Plus">
+            <img tabindex="0" src="../assets/play-icon.png" alt="Play">
+            <img tabindex="0" src="../assets/plus-icon.png" alt="Plus">
           </div>
           <p tabindex="0" class="carousel-item__details--title">Titulo descriptivo</p>
           <p tabindex="0" class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
@@ -202,8 +203,8 @@
         <img class="carousel-item__img" src="https://images.pexels.com/photos/2522682/pexels-photo-2522682.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Mujer posando">
         <div class="carousel-item__details">
           <div>
-            <img tabindex="0" src="./assets/play-icon.png" alt="Play">
-            <img tabindex="0" src="./assets/plus-icon.png" alt="Plus">
+            <img tabindex="0" src="../assets/play-icon.png" alt="Play">
+            <img tabindex="0" src="../assets/plus-icon.png" alt="Plus">
           </div>
           <p tabindex="0" class="carousel-item__details--title">Titulo descriptivo</p>
           <p tabindex="0" class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
@@ -213,8 +214,8 @@
         <img class="carousel-item__img" src="https://images.pexels.com/photos/904276/pexels-photo-904276.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500" alt="Fiesta de pintura">
         <div class="carousel-item__details">
           <div>
-            <img tabindex="0" src="./assets/play-icon.png" alt="Play">
-            <img tabindex="0" src="./assets/plus-icon.png" alt="Plus">
+            <img tabindex="0" src="../assets/play-icon.png" alt="Play">
+            <img tabindex="0" src="../assets/plus-icon.png" alt="Plus">
           </div>
           <p tabindex="0" class="carousel-item__details--title">Titulo descriptivo</p>
           <p tabindex="0" class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
@@ -224,8 +225,8 @@
         <img class="carousel-item__img" src="https://images.pexels.com/photos/1172207/pexels-photo-1172207.jpeg?auto=format%2Ccompress&cs=tinysrgb&dpr=2&w=500" alt="Admirando la naturaleza">
         <div class="carousel-item__details">
           <div>
-            <img tabindex="0" src="./assets/play-icon.png" alt="Play">
-            <img tabindex="0" src="./assets/plus-icon.png" alt="Plus">
+            <img tabindex="0" src="../assets/play-icon.png" alt="Play">
+            <img tabindex="0" src="../assets/plus-icon.png" alt="Plus">
           </div>
           <p tabindex="0" class="carousel-item__details--title">Titulo descriptivo</p>
           <p tabindex="0" class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
@@ -235,8 +236,8 @@
         <img class="carousel-item__img" src="https://images.pexels.com/photos/233129/pexels-photo-233129.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500" alt="Crowded street">
         <div class="carousel-item__details">
           <div>
-            <img tabindex="0" src="./assets/play-icon.png" alt="Play">
-            <img tabindex="0" src="./assets/plus-icon.png" alt="Plus">
+            <img tabindex="0" src="../assets/play-icon.png" alt="Play">
+            <img tabindex="0" src="../assets/plus-icon.png" alt="Plus">
           </div>
           <p tabindex="0" class="carousel-item__details--title">Titulo descriptivo</p>
           <p tabindex="0" class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
@@ -247,7 +248,7 @@
 
   <footer class="footer">
     <a href="/">Terminos de uso</a>
-    <a href="/">Declaracion de privacidad</a>
+    <a href="/">Declaración de privacidad</a>
     <a href="/">Centro de ayuda</a>
   </footer>
 </body>
