--- a/frontend-developer/platzi-video/login/login.html
+++ b/frontend-developer/platzi-video/login/login.html
@@ -4,45 +4,46 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="../assets/platzi_favicon.png">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Mulish&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./styles.css">
-  <title>Login</title>
+  <title>Inicia sesión</title>
 </head>
 <body>
   <header class="header">
-    <img tabindex="0" class="header__img" src="./assets/logo-platzi.png" alt="Platzi Video Logo">
+    <img tabindex="0" class="header__img" src="../assets/logo-platzi.png" alt="Platzi Video Logo">
   </header>
 
   <section class="login">
     <section class="login__container">
-      <h2 tabindex="0">Inicia sesion</h2>
+      <h2 tabindex="0">Inicia sesión</h2>
       <form class="login__container--form">
         <input aria-label="Correo" class="input" type="text" placeholder="Correo">
         <input aria-label="Contraseña" class="input" type="password" placeholder="Contraseña">
-        <button class="button">Iniciar sesion</button>
+        <button class="button">Iniciar sesión</button>
         <div class="login__container--remember">
           <label>
-            <input type="checkbox" id="cbox1" value="checkbox">Recuerdame
+            <input type="checkbox" id="cbox1" value="checkbox">Recuérdame
           </label>
-          <a href="/">Olvide mi contraseña</a>
+          <a href="/">Olvidé mi contraseña</a>
         </div>
       </form>
       <section class="login__container--social-media">
         <div tabindex="0">
-          <img src="./assets/google-icon.png" alt="Google Icon">Inicia sesion con google
+          <img src="../assets/google-icon.png" alt="Google Icon">Inicia sesión con google
         </div>
         <div tabindex="0">
-          <img src="./assets/twitter-icon.png" alt="Twitter Icon">Inicia sesion con twitter
+          <img src="../assets/twitter-icon.png" alt="Twitter Icon">Inicia sesión con twitter
         </div>
       </section>
-      <p tabindex="0" class="login__container--register">No tienes ninguna cuenta? <a href="/">Registrate</a></p>
+      <p tabindex="0" class="login__container--register">No tienes ninguna cuenta? <a href="/">Regístrate</a></p>
     </section>
   </section>
 
   <footer class="footer">
     <a href="/">Terminos de uso</a>
-    <a href="/">Declaracion de privacidad</a>
+    <a href="/">Declaración de privacidad</a>
     <a href="/">Centro de ayuda</a>
   </footer>
 </body>
