--- a/frontend-developer/platzi-video/not-found/not-found.html
+++ b/frontend-developer/platzi-video/not-found/not-found.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="../assets/platzi_favicon.png">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Mulish&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./styles.css">
@@ -11,7 +12,7 @@
 </head>
 <body>
   <header class="header">
-    <img tabindex="0" class="header__img" src="./assets/logo-platzi.png" alt="Platzi Video Logo">
+    <img tabindex="0" class="header__img" src="../assets/logo-platzi.png" alt="Platzi Video Logo">
   </header>
 
   <section class="not-found">
