--- a/frontend-developer/platzi-video/register/register.html
+++ b/frontend-developer/platzi-video/register/register.html
@@ -4,32 +4,33 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="../assets/platzi_favicon.png">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Mulish&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./styles.css">
-  <title>Register</title>
+  <title>Registro</title>
 </head>
 <body>
   <header class="header">
-    <img tabindex="0"class="header__img" src="./assets/logo-platzi.png" alt="Platzi Video Logo">
+    <img tabindex="0"class="header__img" src="../assets/logo-platzi.png" alt="Platzi Video Logo">
   </header>
 
   <section class="register">
     <section class="register__container">
-      <h2 tabindex="0">Registrate</h2>
+      <h2 tabindex="0">Regístrate</h2>
       <form class="register__container--form">
         <input aria-label="Nombre" class="input" type="text" placeholder="Nombre">
         <input aria-label="Correo" class="input" type="text" placeholder="Correo">
         <input aria-label="Contaseña" class="input" type="password" placeholder="Contraseña">
         <button class="button">Registrarme</button>
       </form>
-      <p tabindex="0" class="register__container--login">Ya tienes cuenta? <a href="/">Inicia sesion</a></p>
+      <p tabindex="0" class="register__container--login">Ya tienes cuenta? <a href="/">Inicia sesión</a></p>
     </section>
   </section>
 
   <footer class="footer">
     <a href="/">Terminos de uso</a>
-    <a href="/">Declaracion de privacidad</a>
+    <a href="/">Declaración de privacidad</a>
     <a href="/">Centro de ayuda</a>
   </footer>
 </body>
