--- a/js-fundamentals/simon-game/index.html
+++ b/js-fundamentals/simon-game/index.html
@@ -16,6 +16,7 @@
     <button id="btnStart" class="btn-start" onclick="startGame()">Empezar a jugar!</button>
   </div>
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/2.1.2/sweetalert.min.js"></script>
   <script src="./index.js"></script>
 </body>
 </html>
