Proxy class was added

--- a/js-profesional/exercises/index.html
+++ b/js-profesional/exercises/index.html
@@ -24,6 +24,7 @@
     <li><a href="../exercises/prototype.html">Prototype</a></li>
     <li><a href="../exercises/prototypal-inheritance.html">Prototypal Inheritance</a></li>
     <li><a href="../exercises/promises.html">Promises</a></li>
+    <li><a href="../exercises/proxy.html">Proxy</a></li>
   </ol>
 </body>
 </html>
