--- a/js-profesional/exercises/index.html
+++ b/js-profesional/exercises/index.html
@@ -25,6 +25,7 @@
     <li><a href="../exercises/prototypal-inheritance.html">Prototypal Inheritance</a></li>
     <li><a href="../exercises/promises.html">Promises</a></li>
     <li><a href="../exercises/proxy.html">Proxy</a></li>
+    <li><a href="../exercises/generators.html">Generators</a></li>
   </ol>
 </body>
 </html>
