Abort controller class was added

--- a/js-profesional/exercises/index.html
+++ b/js-profesional/exercises/index.html
@@ -26,6 +26,7 @@
     <li><a href="../exercises/promises.html">Promises</a></li>
     <li><a href="../exercises/proxy.html">Proxy</a></li>
     <li><a href="../exercises/generators.html">Generators</a></li>
+    <li><a href="../exercises/abort-controller.html">Abort Controller</a></li>
   </ol>
 </body>
 </html>
