TypeScript: basic variable class was added

--- a/js-profesional/exercises/abort-controller.html
+++ b/js-profesional/exercises/abort-controller.html
@@ -8,7 +8,7 @@
   <title>Abort controller</title>
 </head>
 <body>
-  <a href="/ejercicios/">Go back</a>
+  <a href="/exercises/index.html">Go back</a>
   <p><em>Open the console</em></p>
 
   <img 
