--- a/js-profesional/exercises/promises.html
+++ b/js-profesional/exercises/promises.html
@@ -12,7 +12,7 @@
     <title>Promises</title>
   </head>
   <body>
-    <a href="/exercises/">Go back</a>
+    <a href="/exercises/index.html">Go back</a>
 
     <ul>
       <li><button id="sequence">Get Top Movies in Sequence</button></li>
