--- a/js-profesional/exercises/scope.html
+++ b/js-profesional/exercises/scope.html
@@ -8,7 +8,7 @@
   <title>Scope</title>
 </head>
 <body>
-  <a href="/exercises/">Go back</a>
+  <a href="/exercises/index.html">Go back</a>
   <p><em>Open the console</em></p>
 
   <script src="https://unpkg.com/jquery@3.3.1/dist/jquery.js"></script>
