--- a/js-profesional/exercises/call-apply-bind.html
+++ b/js-profesional/exercises/call-apply-bind.html
@@ -8,7 +8,7 @@
   <title>Call, apply, bind</title>
 </head>
 <body>
-  <a href="/exercises/">Go back</a>
+  <a href="/exercises/index.html">Go back</a>
   <p><em>Open the console</em></p>
 
   <ul>
