--- a/js-profesional/exercises/prototypal-inheritance.html
+++ b/js-profesional/exercises/prototypal-inheritance.html
@@ -8,7 +8,7 @@
   <title>Prototypal Inheritance</title>
 </head>
 <body>
-  <a href="/exercises/">Go back</a>
+  <a href="/exercises/index.html">Go back</a>
   <p><em>Open the console</em></p>
 
   <h1>
