--- a/js-profesional/exercises/prototype.html
+++ b/js-profesional/exercises/prototype.html
@@ -8,7 +8,7 @@
   <title>Prototype</title>
 </head>
 <body>
-  <a href="/exercises/">Go back</a>
+  <a href="/exercises/index.html">Go back</a>
   <p><em>Open the console</em></p>
 
   <script>
