--- a/js-profesional/exercises/proxy.html
+++ b/js-profesional/exercises/proxy.html
@@ -8,7 +8,7 @@
   <title>Proxy</title>
 </head>
 <body>
-  <a href="/exercises/">Go back</a>
+  <a href="/exercises/index.html">Go back</a>
   <p><em>Open the console</em></p>
 
   <script src="https://unpkg.com/fast-levenshtein@2.0.6/levenshtein.js"></script>
