Design Patterns: creational pattern Singleton class was added

--- a/js-profesional/exercises/index.html
+++ b/js-profesional/exercises/index.html
@@ -28,6 +28,7 @@
     <li><a href="../exercises/generators.html">Generators</a></li>
     <li><a href="../exercises/abort-controller.html">Abort Controller</a></li>
     <li><a href="../exercises/typescript/index.html">TypeScript</a></li>
+    <li><a href="../exercises/singleton/index.html">Singleton Pattern</a></li>
   </ol>
 </body>
 </html>
