Design patterns: behavior pattern observer class was added

--- a/js-profesional/exercises/index.html
+++ b/js-profesional/exercises/index.html
@@ -29,6 +29,7 @@
     <li><a href="../exercises/abort-controller.html">Abort Controller</a></li>
     <li><a href="../exercises/typescript/index.html">TypeScript</a></li>
     <li><a href="../exercises/singleton/index.html">Singleton Pattern</a></li>
+    <li><a href="../exercises/oberserver-pattern/index.html">Observer Pattern</a></li>
   </ol>
 </body>
 </html>
