--- a/js-profesional/exercises/index.html
+++ b/js-profesional/exercises/index.html
@@ -30,6 +30,7 @@
     <li><a href="../exercises/typescript/index.html">TypeScript</a></li>
     <li><a href="../exercises/singleton/index.html">Singleton Pattern</a></li>
     <li><a href="../exercises/oberserver-pattern/index.html">Observer Pattern</a></li>
+    <li><a href="../exercises/decorator-pattern/index.html">Decorator Pattern</a></li>
   </ol>
 </body>
 </html>
